force-app/main/default/objects/Lead/fields/Lead_Source_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Modified_Date__c</fullName>
    <label>Lead Source Modified Date</label>
    <type>Date</type>
</CustomField>