force-app/main/default/objects/Lead/fields/Lead_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeadSourcingManager</relationshipName>
    <type>Lookup</type>
</CustomField>