force-app/main/default/objects/Lead/fields/Lead_Sub_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Sub_Source__c</fullName>
    <label>Lead Sub Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Lead_Sub_Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bombay times</fullName>
            </value>
            <value>
                <fullName>Business Today</fullName>
            </value>
            <value>
                <fullName>DNA</fullName>
            </value>
            <value>
                <fullName>Economic Times</fullName>
            </value>
            <value>
                <fullName>Employee Name</fullName>
            </value>
            <value>
                <fullName>Facebook_Conversion_Marathi</fullName>
            </value>
            <value>
                <fullName>Forbes</fullName>
            </value>
            <value>
                <fullName>Fortune India</fullName>
            </value>
            <value>
                <fullName>Google_Display_Marathi</fullName>
            </value>
            <value>
                <fullName>Hindustan Times</fullName>
            </value>
            <value>
                <fullName>Indian Express</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Lokmat</fullName>
            </value>
            <value>
                <fullName>Loksatta</fullName>
            </value>
            <value>
                <fullName>Maharashtra Times</fullName>
            </value>
            <value>
                <fullName>Mall Name</fullName>
            </value>
            <value>
                <fullName>Mid-day</fullName>
            </value>
            <value>
                <fullName>Multiplex Name</fullName>
            </value>
            <value>
                <fullName>Mumbai Mirror</fullName>
            </value>
            <value>
                <fullName>Name of Refree</fullName>
            </value>
            <value>
                <fullName>Newsweek</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>OutStation</fullName>
            </value>
            <value>
                <fullName>Sakal</fullName>
            </value>
            <value>
                <fullName>Society Name</fullName>
            </value>
            <value>
                <fullName>The Hindu</fullName>
            </value>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Times of India</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>