force-app/main/default/objects/Lead/fields/Mobile_No_with_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_with_Country_Code__c</fullName>
    <formula>TRIM(RIGHT( TEXT(RDS_Country_Code__c) , LEN(TEXT(RDS_Country_Code__c))-1 ))+RW_Mobile_No__c</formula>
    <label>Mobile No with Country Code</label>
    <type>Text</type>
</CustomField>