force-app/main/default/objects/Lead/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right(RW_Mobile_No__c,5))</formula>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>