force-app/main/default/objects/Lead/fields/No_of_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>No_of_Family_Members__c</fullName>
    <label>No of Family Members</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>