force-app/main/default/objects/Lead/fields/No_of_Follow_ups_After_1st_Call__c.field-meta.xml
<CustomField>
    <fullName>No_of_Follow_ups_After_1st_Call__c</fullName>
    <label>No. of Follow-ups After 1st Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>