force-app/main/default/objects/Lead/fields/NRI_OS_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>NRI_OS_Sourcing_Manager__c</fullName>
    <label>NRI/OS Sourcing Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ashish Mourya</fullName>
            </value>
            <value>
                <fullName>Deepika Nainani</fullName>
            </value>
            <value>
                <fullName>Harishchandra Singh</fullName>
            </value>
            <value>
                <fullName>Inzimamul Patel</fullName>
            </value>
            <value>
                <fullName>Karan Solanki</fullName>
            </value>
            <value>
                <fullName>Mayoor Pant</fullName>
            </value>
            <value>
                <fullName>Mustafiz Saiyed</fullName>
            </value>
            <value>
                <fullName>Nishad Dixit</fullName>
            </value>
            <value>
                <fullName>Piyoosh Lalchandani</fullName>
            </value>
            <value>
                <fullName>Rahul Khattri</fullName>
            </value>
            <value>
                <fullName>Rohit Sonvaniya</fullName>
            </value>
            <value>
                <fullName>Shajil Subhashithan Thaikkattil</fullName>
            </value>
            <value>
                <fullName>Shashikant Singh</fullName>
            </value>
            <value>
                <fullName>Simran Chhoda</fullName>
            </value>
            <value>
                <fullName>Virat Vandre</fullName>
            </value>
            <value>
                <fullName>Vivek Makhijani</fullName>
            </value>
            <value>
                <fullName>DIRECT</fullName>
                <isActive>false</isActive>
                <label>DIRECT</label>
            </value>
            <value>
                <fullName>Simran Chhangani</fullName>
                <isActive>false</isActive>
                <label>Simran Chhangani</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>