force-app/main/default/objects/Lead/fields/Opt_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Opt_for_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt for Referral</label>
    <type>Checkbox</type>
</CustomField>