force-app/main/default/objects/Lead/fields/Owner_Username__c.field-meta.xml
<CustomField>
    <fullName>Owner_Username__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Username</label>
    <type>Text</type>
</CustomField>