force-app/main/default/objects/Lead/fields/OwnerPhone__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhone__c</fullName>
    <formula>IF(
NOT(ISBLANK(OwnerId)) &amp;&amp; LEFT(OwnerId, 3) = &quot;005&quot;,
Owner:User.MobilePhone,
&quot;&quot;
)</formula>
    <label>OwnerPhone</label>
    <type>Text</type>
</CustomField>