force-app/main/default/objects/Lead/fields/Owners_Team__c.field-meta.xml
<CustomField>
    <fullName>Owners_Team__c</fullName>
    <formula>TEXT (Owner:User.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owners Team</label>
    <type>Text</type>
</CustomField>