force-app/main/default/objects/Lead/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>