force-app/main/default/objects/Lead/fields/Pre_Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_User__c</fullName>
    <label>Pre Sales User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abdullah Shaikh</fullName>
            </value>
            <value>
                <fullName>Abdul Rehman Shaikh</fullName>
            </value>
            <value>
                <fullName>Abhishek Sonawane</fullName>
            </value>
            <value>
                <fullName>Adarsh  Singh</fullName>
            </value>
            <value>
                <fullName>Adnan Shaikh</fullName>
            </value>
            <value>
                <fullName>Ahmad Patel</fullName>
            </value>
            <value>
                <fullName>Ajay Chavan</fullName>
            </value>
            <value>
                <fullName>Akash Kedare</fullName>
            </value>
            <value>
                <fullName>Akshay Jaiswal</fullName>
            </value>
            <value>
                <fullName>Amaan Shaikh</fullName>
            </value>
            <value>
                <fullName>Aman Kumar Mishra</fullName>
            </value>
            <value>
                <fullName>Amir khan</fullName>
            </value>
            <value>
                <fullName>Amit Kamble</fullName>
            </value>
            <value>
                <fullName>Anhar Shaikh  CBSL</fullName>
            </value>
            <value>
                <fullName>Aniket Adhav</fullName>
            </value>
            <value>
                <fullName>Aniket Bhagwat</fullName>
            </value>
            <value>
                <fullName>Aniket Rokade</fullName>
            </value>
            <value>
                <fullName>Anjali chiplunkar</fullName>
            </value>
            <value>
                <fullName>Anju Fernandes</fullName>
            </value>
            <value>
                <fullName>Ankita Umbre</fullName>
            </value>
            <value>
                <fullName>Ankush Chauhan</fullName>
            </value>
            <value>
                <fullName>Armaan Sayyed</fullName>
            </value>
            <value>
                <fullName>Arvind Choudhary</fullName>
            </value>
            <value>
                <fullName>Asmita Jadhav</fullName>
            </value>
            <value>
                <fullName>Asrar Raeen</fullName>
            </value>
            <value>
                <fullName>Avtar Kaur</fullName>
            </value>
            <value>
                <fullName>Ayisha Shaikh</fullName>
            </value>
            <value>
                <fullName>Bhageshwari Dhanwani</fullName>
            </value>
            <value>
                <fullName>C Akash Kedare</fullName>
            </value>
            <value>
                <fullName>CBSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>