force-app/main/default/objects/Lead/fields/Primary_Mobile_No_with_code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Mobile_No_with_code__c</fullName>
    <formula>TEXT(RDS_Country_Code__c) &amp;(RW_Mobile_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Mobile No with code</label>
    <type>Text</type>
</CustomField>