force-app/main/default/objects/Lead/fields/Projects_Interested__c.field-meta.xml
<CustomField>
    <fullName>Projects_Interested__c</fullName>
    <label>Projects Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Square Phase II</fullName>
            </value>
            <value>
                <fullName>Forest County</fullName>
            </value>
            <value>
                <fullName>Ela The Earth</fullName>
            </value>
            <value>
                <fullName>Xotech Homes</fullName>
            </value>
            <value>
                <fullName>Willows</fullName>
            </value>
            <value>
                <fullName>Windermere</fullName>
            </value>
            <value>
                <fullName>Vista</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Garnet’s Bay</fullName>
            </value>
            <value>
                <fullName>Runwal Bliss</fullName>
            </value>
            <value>
                <fullName>Runwal Greens</fullName>
            </value>
            <value>
                <fullName>Runwal Forests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>