force-app/main/default/objects/Lead/fields/Rating_formual_image__c.field-meta.xml
<CustomField>
    <fullName>Rating_formual_image__c</fullName>
    <formula>CASE(
    Rating,
    &quot;Hot&quot;, IMAGE(&quot;/resource/HotRating&quot;, &quot;Hot Rating&quot;, 30, 80),
    &quot;Warm&quot;, IMAGE(&quot;/resource/WarmRating&quot;, &quot;Warm Rating&quot;, 30, 80),
    &quot;Cold&quot;, IMAGE(&quot;/resource/coldRating&quot;, &quot;Cold Rating&quot;, 30, 80),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating</label>
    <type>Text</type>
</CustomField>