force-app/main/default/objects/Lead/fields/RDS_Mobile__c.field-meta.xml
<CustomField>
    <fullName>RDS_Mobile__c</fullName>
    <label>Mobile RDS</label>
    <length>15</length>
    <type>Text</type>
</CustomField>