force-app/main/default/objects/Lead/fields/Reason_for_not_qualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_qualified__c</fullName>
    <label>Reason for not qualified</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>