force-app/main/default/objects/Lead/fields/Referral_Batch_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referral_Batch_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Batch Lead</label>
    <type>Checkbox</type>
</CustomField>