force-app/main/default/objects/Lead/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account)</relationshipLabel>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>