force-app/main/default/objects/Lead/fields/Retention_Customer_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Retention_Customer_SAP_Code__c</fullName>
    <label>Retention Customer SAP Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>