force-app/main/default/objects/Lead/fields/Retention_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>Retention_RM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retention RM Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>