force-app/main/default/objects/Lead/fields/RW_Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>