force-app/main/default/objects/Lead/fields/RW_Any_Other_Vastu__c.field-meta.xml
<CustomField>
    <fullName>RW_Any_Other_Vastu__c</fullName>
    <label>Adset ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>