force-app/main/default/objects/Lead/fields/RW_Batch_Lead_Check__c.field-meta.xml
<CustomField>
    <fullName>RW_Batch_Lead_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Lead Check</label>
    <type>Checkbox</type>
</CustomField>