force-app/main/default/objects/Lead/fields/RW_Budget_Rs_in_Cr__c.field-meta.xml
<CustomField>
    <fullName>RW_Budget_Rs_in_Cr__c</fullName>
    <label>Budget (in Rs.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>